# wasmtime-embed

./: .gitignore  Cargo.toml  README.md  hello.wasm  l1.wasm  l1.wat
examples/: embed.rs
wasmtime-embed/: Cargo.toml
wasmtime-embed-macro/: Cargo.toml
wasmtime-embed-macro/src/: lib.rs
wasmtime-embed/src/: context.rs  extra.rs  imports.rs  instance.rs  instantiate.rs  lib.rs  wasi.rs
