[package]
name = "wasmtime-embed-macro"
version = "0.1.0"
authors = ["Yury Delendik <ydelendik@mozilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "0.15.40"
quote = "0.6.13"
proc-macro2 = "0.4.30"

[features]
default = ["syn/full"]