[package]
name = "wasmtime-embed"
version = "0.1.0"
authors = ["Yury Delendik <ydelendik@mozilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime-runtime = { path = "../../../wasmtime/wasmtime-runtime" }
wasmtime-environ = { path = "../../../wasmtime/wasmtime-environ" }
wasmtime-jit = { path = "../../../wasmtime/wasmtime-jit" }
wasmtime-wasi = { path = "../../../wasmtime/wasmtime-wasi" }
cranelift-codegen = "0.33.0"
cranelift-native = "0.33.0"
cranelift-entity = "0.33.0"
cranelift-wasm = "0.33.0"
failure = { version = "0.1.3", default-features = false }
failure_derive = { version = "0.1.3", default-features = false }
wasi-common = { git = "https://github.com/CraneStation/wasi-common" }
